pushing up images

--- a/info.html
+++ b/info.html
@@ -5,8 +5,43 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  
+  <link rel="stylesheet" href="CSS\Tabula-rasa.css">
+  <link rel="stylesheet" href="CSS\Flex.css">
+  <link rel="stylesheet" href="CSS\Layout.css">
+
+  <script src="https://kit.fontawesome.com/ca09017d41.js" crossorigin="anonymous"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito&family=Open+Sans:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
+  <header>
   
+    <userlist>
+      <i class="fa fa-user"></i>
+      <p>Kalle Anka</p>
+      <i class="fa fa-caret-down"></i>
+      <ul>
+        <li>Kalle Anka</li>
+        <li>Musse Pigg</li>
+        <li>Farbror Frej</li>
+      </ul>
+    </userlist>
+    
+    <contact>
+      <i class="fa fa-phone"></i>
+      <phone>555 555-5555</phone>
+      <i class="fa fa-envelope"></i>
+      <email>info@mystore.com</email>
+    </contact>
+    
+    <social-media-icons>
+      <i class="fa fa-facebook-square fix"></i>
+      <i class="fa fa-twitter-square"></i>
+      <i class="fa fa-instagram"></i> <!-- Couldent get the square, seems like some of font awsomes icons are malfuncturing -->
+      <i class="fa fa-pinterest-square"></i>
+    </social-media-icons>
+
+  </header>
+
 </body>
 </html>
