Some kind of start at least

--- a/info.html
+++ b/info.html
@@ -18,26 +18,29 @@
   
     <userlist>
       <i class="fa fa-user"></i>
-      <p>Kalle Anka</p>
+      <select name="" id="">
+        <option value="">Kalle Anka</option>
+        <option value="">Musse Pigg</option>
+        <option value="">Frans Ferdinand</option>
+      </select>
       <i class="fa fa-caret-down"></i>
-      <ul>
-        <li>Kalle Anka</li>
-        <li>Musse Pigg</li>
-        <li>Farbror Frej</li>
-      </ul>
     </userlist>
     
     <contact>
-      <i class="fa fa-phone"></i>
-      <phone>555 555-5555</phone>
-      <i class="fa fa-envelope"></i>
-      <email>info@mystore.com</email>
+      <a href=#>
+        <i class="fa fa-phone"></i>
+        <span>555 555-5555</span>
+      </a>
+      <a href=#>
+        <i class="fa fa-envelope"></i>
+        <span>info@mystore.com</span>
+      </a>
     </contact>
     
     <social-media-icons>
       <i class="fa fa-facebook-square fix"></i>
       <i class="fa fa-twitter-square"></i>
-      <i class="fa fa-instagram"></i> <!-- Couldent get the square, seems like some of font awsomes icons are malfuncturing -->
+      <i class="fa fa-instagram"></i>
       <i class="fa fa-pinterest-square"></i>
     </social-media-icons>
 
