comp swap just a lill bit of salesItem (not done)

--- a/info.html
+++ b/info.html
@@ -45,6 +45,23 @@
     </social-media-icons>
 
   </header>
+  <section>
+    <salesItem>
+      <div>
+        <img src="webshop images\images\products\08.jpg" alt="">
+      </div>
+      <div>
+        <h2>Surface Book 14 in.</h2>
+        <category>computers & Accessories</category> <br>
+        <price> $ 1251.5 </price>
+        <p>En beskrivning lipsum dippsum faderuten.</p>
+        <p>Shopingcart</p>
+        <p>betyg och stjärna</p>
+      </div>
+      
+    </salesItem>  
+
+  </section>
 
 </body>
 </html>
